--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         color:#fff;
         display:flex;
         flex-direction:column;
+        justify-content:center;
+        align-items:center;
      
         
       }
